--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,25 +5,28 @@
           "type": "node",
           "request": "launch",
           "name": "Debug Nest Framework",
+          "runtimeExecutable": "nest",
           "args": [
-              "${workspaceFolder}/src/main.ts",
-            ],
-            "runtimeExecutable": "npm",
-            "runtimeArgs": [
-              "run",
-              "start:dev",
-              // "--lazy",
+              "${workspaceFolder}/src/main.ts"
+          ],
+          "runtimeArgs": [
+            "start",
+              "--watch",
               // "-r",
               // "ts-node/register",
               // "-r",
-              // "tsconfig-paths/register",
+              // "tsconfig-paths/register"
           ],
           "sourceMaps": true,
-          "restart": true,
           "envFile": "${workspaceFolder}/.env",
           "cwd": "${workspaceRoot}",
           "console": "integratedTerminal",
-          "protocol": "inspector"
+          "protocol": "inspector",
+          "env": {
+            // "ENV": "local",
+            "DEBUG": "sequelize*"
+          },
+          "restart": true
       }
   ]
 }
