--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.1.2",
+    "@nestjs/common": "^9.2.1",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.1.2",
+    "@nestjs/core": "^9.2.1",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.1.2",
+    "@nestjs/platform-express": "^9.2.1",
     "@nestjs/sequelize": "^9.0.0",
-    "@nestjs/swagger": "^6.1.2",
-    "@types/express": "^4.17.14",
-    "base-repo": "^3.1.3",
+    "@nestjs/swagger": "^6.1.4",
+    "@types/express": "^4.17.15",
+    "base-repo": "^3.1.4",
     "bcrypt": "^5.0.1",
     "cache-manager": "^4.1.0",
     "cache-manager-redis-store": "^2.0.0",
@@ -43,37 +43,39 @@
     "dotenv": "^16.0.2",
     "joi": "^17.6.1",
     "json-api-serializer": "^2.6.6",
-    "luxon": "^3.0.4",
+    "luxon": "^3.2.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.7",
+    "rxjs": "^7.8.0",
     "sequelize": "^6.23.2",
-    "sequelize-typescript": "^2.1.3",
+    "sequelize-typescript": "^2.1.5",
     "source-map-support": "^0.5.21",
-    "swagger-ui-express": "^4.5.0",
-    "umzug": "^3.2.1"
+    "swagger-ui-express": "^4.6.0",
+    "umzug": "^3.2.1",
+    "xxhashjs": "^0.2.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.1.4",
-    "@nestjs/schematics": "^9.0.3",
-    "@nestjs/testing": "^9.1.2",
+    "@nestjs/cli": "^9.1.8",
+    "@nestjs/schematics": "^9.0.4",
+    "@nestjs/testing": "^9.2.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cache-manager": "^4.0.2",
     "@types/cache-manager-redis-store": "^2.0.1",
     "@types/jest": "^29.0.3",
     "@types/json-api-serializer": "^2.6.3",
-    "@types/luxon": "^3.0.1",
+    "@types/luxon": "^3.2.0",
     "@types/multer": "^1.4.7",
-    "@types/node": "^16.11.62",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34",
+    "@types/node": "^16.18.11",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
     "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.7",
+    "@types/xxhashjs": "^0.2.2",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
     "eslint": "^8.24.0",
@@ -89,7 +91,7 @@
     "ts-jest": "^28.0.8",
     "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.8.4"
   },
   "jest": {
