--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "engines": {
-    "node": "^16.17.0"
+    "node": "^18.14.2"
   },
   "scripts": {
     "migrate": "ts-node -r tsconfig-paths/register",
@@ -14,7 +14,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "DEBUG=sequelize* nest start --watch",
+    "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -25,15 +25,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@fastify/static": "^6.8.0",
-    "@nestjs/common": "^9.3.1",
-    "@nestjs/config": "^2.3.0",
-    "@nestjs/core": "^9.3.1",
+    "@fastify/static": "^6.9.0",
+    "@nestjs/common": "^9.3.9",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^9.3.9",
     "@nestjs/jwt": "^9.0.0",
-    "@nestjs/passport": "^9.0.1",
-    "@nestjs/platform-fastify": "^9.3.1",
+    "@nestjs/passport": "^9.0.3",
+    "@nestjs/platform-fastify": "^9.3.9",
     "@nestjs/sequelize": "^9.0.0",
-    "@nestjs/swagger": "^6.1.4",
+    "@nestjs/swagger": "^6.2.1",
     "base-repo": "^3.1.8",
     "bcrypt": "^5.1.0",
     "cache-manager": "^4.1.0",
@@ -41,8 +41,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
-    "fastify": "^4.12.0",
-    "joi": "^17.7.0",
+    "fastify": "^4.13.0",
+    "joi": "^17.8.3",
     "json-api-serializer": "^2.6.6",
     "luxon": "^3.2.1",
     "passport": "^0.6.0",
@@ -50,45 +50,45 @@
     "passport-local": "^1.0.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
+    "rimraf": "^4.1.2",
     "rxjs": "^7.8.0",
-    "sequelize": "^6.23.2",
+    "sequelize": "^6.29.0",
     "sequelize-typescript": "^2.1.5",
     "source-map-support": "^0.5.21",
     "umzug": "^3.2.1",
     "xxhashjs": "^0.2.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.1.9",
+    "@nestjs/cli": "^9.2.0",
     "@nestjs/schematics": "^9.0.4",
-    "@nestjs/testing": "^9.2.1",
+    "@nestjs/testing": "^9.3.9",
     "@types/bcrypt": "^5.0.0",
     "@types/cache-manager": "^4.0.2",
     "@types/cache-manager-redis-store": "^2.0.1",
-    "@types/jest": "^29.0.3",
+    "@types/jest": "^29.4.0",
     "@types/json-api-serializer": "^2.6.3",
     "@types/luxon": "^3.2.0",
     "@types/multer": "^1.4.7",
-    "@types/node": "^16.18.11",
+    "@types/node": "^18.14.2",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.12",
-    "@types/validator": "^13.7.11",
+    "@types/validator": "^13.7.12",
     "@types/xxhashjs": "^0.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "eslint": "^8.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "eslint": "^8.35.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.3",
-    "prettier": "^2.8.3",
-    "supertest": "^6.2.4",
-    "ts-jest": "^28.0.8",
+    "jest": "^29.4.3",
+    "prettier": "^2.8.4",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.2",
