--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "baseUrl": "./src",
     "incremental": true,
     "skipLibCheck": true,
+    "resolveJsonModule": true,
     "strictNullChecks": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
