--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "joi": "^17.8.3",
     "json-api-serializer": "^2.6.6",
     "luxon": "^3.2.1",
+    "nestjs-cls": "^3.2.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
