--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.4",
     "fastify": "^4.18.0",
     "joi": "^17.9.2",
