--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-starter",
-  "version": "3.0.4-rc.0",
+  "version": "3.0.5-rc=1.0",
   "description": "",
   "author": "",
   "private": true,
