--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-starter",
-  "version": "2.1.1-rc.0",
+  "version": "2.1.2-0",
   "description": "",
   "author": "",
   "private": true,
