--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@fastify/static": "^6.10.2",
+    "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^10.1.3",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.1.3",
@@ -34,7 +35,7 @@
     "@nestjs/platform-fastify": "^10.1.3",
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.7",
-    "base-repo": "^3.1.8",
+    "base-repo": "^3.1.10",
     "bcrypt": "^5.1.0",
     "cache-manager": "^4.1.0",
     "cache-manager-redis-store": "^2.0.0",
