--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "@nestjs/cli": "^10.1.11",
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.1.3",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.75",
     "@types/bcrypt": "^5.0.0",
     "@types/cache-manager": "^4.0.2",
     "@types/cache-manager-redis-store": "^2.0.1",
