Add s3 without credential

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
       "@utils/*": ["./utils/*"],
       "@cms/*": ["./modules/cms/*"],
       "@apps/*": ["./modules/apps/*"],
-      "@middleware/*": ["./modules/apps/*"],
+      "@middleware/*": ["./modules/middleware/*"],
       "@_common/*": ["./modules/_common/*"],
       "@config/*": ["./config/*"]
     }
