--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/s3-request-presigner": "^3.353.0",
     "@fastify/static": "^6.10.2",
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^10.1.3",
@@ -35,6 +36,7 @@
     "@nestjs/platform-fastify": "^10.1.3",
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.7",
+    "aws-sdk": "^2.1398.0",
     "base-repo": "^3.1.10",
     "bcrypt": "^5.1.0",
     "cache-manager": "^4.1.0",
@@ -43,9 +45,11 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.1.4",
     "fastify": "^4.18.0",
+    "fastify-multer": "^2.0.3",
     "joi": "^17.9.2",
     "json-api-serializer": "^2.6.6",
     "luxon": "^3.3.0",
+    "moment": "^2.29.4",
     "nestjs-cls": "^3.5.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
