--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ workflow:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
     - if: $CI_MERGE_REQUEST_IID
     - if: $CI_COMMIT_TAG
-    - if: $CI_COMMIT_BRANCH == "V10-rc1-x1"
+    - if: $CI_COMMIT_BRANCH == "V10-rc1-x1" || $CI_COMMIT_BRANCH == "V10-rc1-x2"
 
 cache:
   key:
