--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-starter",
-  "version": "10.0.0-rc.1",
+  "version": "10.0.0",
   "description": "",
   "author": "",
   "private": true,
