lint(): add linter package local

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,13 +11,16 @@
     "tsconfigRootDir": "./"
   },
   "plugins": [
-    "@typescript-eslint/eslint-plugin" 
+    "@typescript-eslint/eslint-plugin",
+    "@rgb/nestjs"
     // "import"
   ],
   "extends": [
     "airbnb-base",
     "airbnb-typescript/base",
+    "plugin:@rgb/nestjs/nestjs-config",
     "plugin:@typescript-eslint/recommended"
+
     // "plugin:prettier/recommended",
     // "plugin:import/recommended"
   ],
