--- a/package.json
+++ b/package.json
@@ -25,20 +25,20 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.460.0",
-    "@aws-sdk/credential-providers": "^3.460.0",
-    "@aws-sdk/s3-request-presigner": "^3.460.0",
+    "@aws-sdk/client-s3": "^3.473.0",
+    "@aws-sdk/credential-providers": "^3.473.0",
+    "@aws-sdk/s3-request-presigner": "^3.473.0",
     "@fastify/static": "^6.12.0",
     "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^10.2.10",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.2.10",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.2",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-fastify": "^10.2.10",
     "@nestjs/sequelize": "^10.0.0",
-    "@nestjs/swagger": "^7.1.16",
-    "aws-sdk": "^2.1505.0",
+    "@nestjs/swagger": "^7.1.17",
+    "aws-sdk": "^2.1518.0",
     "axios": "^1.6.2",
     "base-repo": "^3.1.10",
     "bcrypt": "^5.1.1",
@@ -47,24 +47,24 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
-    "fastify": "^4.24.3",
+    "fastify": "^4.25.0",
     "fastify-multer": "^2.0.3",
     "joi": "^17.11.0",
     "json-api-serializer": "^2.6.6",
     "luxon": "^3.4.4",
     "nestjs-cls": "^3.6.0",
     "opossum": "^8.1.3",
-    "passport": "^0.6.0",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^4.4.1",
+    "reflect-metadata": "^0.1.14",
+    "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
-    "sequelize": "^6.35.1",
+    "sequelize": "^6.35.2",
     "sequelize-typescript": "^2.1.6",
     "source-map-support": "^0.5.21",
-    "umzug": "^3.3.1",
+    "umzug": "^3.4.0",
     "url-join": "^4.0.1",
     "xxhashjs": "^0.2.2"
   },
@@ -72,40 +72,41 @@
     "@nestjs/cli": "^10.2.1",
     "@nestjs/schematics": "^10.0.3",
     "@nestjs/testing": "^10.2.10",
+    "@rgb/eslint-plugin-nestjs": "git+https://repository.rollingglory.com/rollingglory/rgb-nestjs-linter#v1.0.2",
     "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.93",
-    "@types/bcrypt": "^5.0.0",
+    "@swc/core": "^1.3.100",
+    "@types/bcrypt": "^5.0.2",
     "@types/cache-manager": "^4.0.6",
     "@types/cache-manager-redis-store": "^2.0.4",
-    "@types/jest": "^29.5.7",
+    "@types/jest": "^29.5.11",
     "@types/json-api-serializer": "^2.6.6",
-    "@types/luxon": "^3.3.5",
+    "@types/luxon": "^3.3.7",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.10.4",
     "@types/opossum": "^8.1.6",
     "@types/passport-jwt": "^3.0.13",
     "@types/passport-local": "^1.0.38",
     "@types/sequelize": "^4.28.19",
-    "@types/supertest": "^2.0.15",
+    "@types/supertest": "^2.0.16",
     "@types/validator": "^13.11.7",
     "@types/xxhashjs": "^0.2.4",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "eslint": "^8.54.0",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
-    "prettier": "^3.1.0",
+    "prettier": "^3.1.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-loader": "^9.5.0",
-    "ts-node": "^10.9.1",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.3"
   },
   "jest": {
     "moduleFileExtensions": [
