feat(script): add script generator

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
+    "gen:model": "ts-node -r tsconfig-paths/register ./script/generate-script.ts",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
@@ -90,6 +91,7 @@
     "@types/supertest": "^2.0.16",
     "@types/validator": "^13.11.7",
     "@types/xxhashjs": "^0.2.4",
+    "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "eslint": "^8.55.0",
@@ -106,7 +108,8 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "yargs": "^17.7.2"
   },
   "jest": {
     "moduleFileExtensions": [
